tests/negative/neg_case_multi_choice.safe
-- Test: neg_case_multi_choice
-- Description: Multi-choice case arms are outside the PR11.2 case subset.
-- Expected: REJECT unsupported_source_construct

package Neg_Case_Multi_Choice is

   function Classify (Value : in Integer) return Integer is
   begin
      case Value is
         when 1, 2 then
            return 1;
         end when;
         when others then
            return 0;
         end when;
      end case;
   end Classify;

end Neg_Case_Multi_Choice;
